--- a/crwn-clothing/public/index.html
+++ b/crwn-clothing/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300">
-  <title>React App</title>
+  <title>CRWN Clothing</title>
 </head>
 
 <body>
